--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - "nightly"
 # command to install dependencies
 install:
+  - "pip install -U pip setuptools"
   - "pip install -r requirements.txt"
 # command to run tests
 script: nosetests
